# aoc_2022

./: .gitignore  CMakeLists.txt  main.cpp
Day6/: CMakeLists.txt  main.cpp
Day7/: CMakeLists.txt  main.cpp
Day7/node/: CMakeLists.txt  node.cpp  node.hpp
node/: CMakeLists.txt  node.cpp  node.hpp
